HBASE-24349 Use rubocop 0.81.0 in Dockerfile (#1692)
Signed-off-by: Viraj Jasani <vjasani@apache.org>
Signed-off-by: Jan Hentschel <jan.hentschel@ultratendency.com>
(cherry picked from commit 6d9427d5ec827ee1e7b3d45ddf01f6c50c3d9bbc)

Change-Id: Ifddd7f507fe893b6bafc4f8e007ea5bb2f4618bb

--- a/dev-support/docker/Dockerfile
+++ b/dev-support/docker/Dockerfile
@@ -34,7 +34,10 @@ RUN apt-get -q update && apt-get -q install --no-install-recommends -y \
        ruby-dev \
        wget \
        && \
-    gem install --no-document rake rubocop ruby-lint
+    gem install --no-document \
+      rake:13.0.1 \
+      rubocop:0.81.0 \
+      ruby-lint:2.3.1
 
 ENV FINDBUGS_HOME /usr
 
