--- a/hbase-endpoint/pom.xml
+++ b/hbase-endpoint/pom.xml
@@ -304,6 +304,10 @@
               <groupId>org.apache.zookeeper</groupId>
               <artifactId>zookeeper</artifactId>
             </exclusion>
+            <exclusion>
+              <groupId>com.google.code.findbugs</groupId>
+              <artifactId>annotations</artifactId>
+            </exclusion>
           </exclusions>
         </dependency>
         <!-- Hadoop needs Netty 3.x at test scope for the minicluster -->
