--- a/hbase-http/pom.xml
+++ b/hbase-http/pom.xml
@@ -371,6 +371,10 @@
               <groupId>org.apache.zookeeper</groupId>
               <artifactId>zookeeper</artifactId>
             </exclusion>
+            <exclusion>
+              <groupId>com.google.code.findbugs</groupId>
+              <artifactId>annotations</artifactId>
+            </exclusion>
           </exclusions>
           <scope>test</scope>
         </dependency>
