--- a/hbase-shell/pom.xml
+++ b/hbase-shell/pom.xml
@@ -293,6 +293,10 @@
               <groupId>org.apache.zookeeper</groupId>
               <artifactId>zookeeper</artifactId>
             </exclusion>
+            <exclusion>
+              <groupId>com.google.code.findbugs</groupId>
+              <artifactId>annotations</artifactId>
+            </exclusion>
           </exclusions>
         </dependency>
         <dependency>
