--- a/hbase-testing-util/pom.xml
+++ b/hbase-testing-util/pom.xml
@@ -203,6 +203,10 @@
                         <groupId>org.apache.zookeeper</groupId>
                         <artifactId>zookeeper</artifactId>
                       </exclusion>
+                      <exclusion>
+                        <groupId>com.google.code.findbugs</groupId>
+                        <artifactId>annotations</artifactId>
+                      </exclusion>
                     </exclusions>
                 </dependency>
                 <dependency>
