--- a/hbase-thrift/pom.xml
+++ b/hbase-thrift/pom.xml
@@ -505,6 +505,10 @@
               <groupId>org.apache.zookeeper</groupId>
               <artifactId>zookeeper</artifactId>
             </exclusion>
+            <exclusion>
+              <groupId>com.google.code.findbugs</groupId>
+              <artifactId>annotations</artifactId>
+            </exclusion>
           </exclusions>
         </dependency>
       </dependencies>
