CDPD-20355 Lift exclusion for com.google.code.findbugs:annotations to the parent pom (addendum)
If we set the exclusion on the dependency in dependencyManagement, we
can avoid having to set it for all other modules in the project.

Change-Id: Ibb774a03186d6fa55de865ce2f89f7ca8aa98cd9

--- a/pom.xml
+++ b/pom.xml
@@ -2801,6 +2801,10 @@
                 <groupId>com.google.code.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
               </exclusion>
+              <exclusion>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>annotations</artifactId>
+              </exclusion>
             </exclusions>
           </dependency>
           <dependency>
@@ -3153,6 +3157,10 @@
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
              </exclusion>
+              <exclusion>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>annotations</artifactId>
+              </exclusion>
            </exclusions>
          </dependency>
          <dependency>
