--- a/pom.xml
+++ b/pom.xml
@@ -1901,8 +1901,8 @@
         <version>${thrift.version}</version>
         <exclusions>
           <exclusion>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
